fixed customizer block editor z-index

--- a/src/blocks/customizer/editor.scss
+++ b/src/blocks/customizer/editor.scss
@@ -76,7 +76,7 @@
         }
     }
     .components-placeholder__fieldset {
-        z-index: 6;
+        z-index: 21;
     }
 
     // items list.
